Refactor PMDLoopDemo class to improve SOQL query handling and maintain sharing rules

--- a/force-app/main/default/classes/PMDLoopDemo.cls
+++ b/force-app/main/default/classes/PMDLoopDemo.cls
@@ -3,7 +3,7 @@
  * The processRelatedContacts method contains a SOQL query inside a for loop,
  * which is an inefficient pattern that can easily hit governor limits.
  */
-public class PMDLoopDemo {
+public with sharing class PMDLoopDemo {
 
     public static void processRelatedContacts(List<Account> triggerAccounts) {
 
@@ -13,13 +13,13 @@ public class PMDLoopDemo {
             // BAD PRACTICE: SOQL query inside a for loop.
             // PMD will flag this line with the 'AvoidSoqlInLoops' rule.
             // If triggerAccounts contains 100 records, this will execute 100 separate SOQL queries.
-            List<Contact> relatedContacts = [SELECT Id, Name FROM Contact WHERE AccountId = :acc.Id];
+            /*List<Contact> relatedContacts = [SELECT Id, Name FROM Contact WHERE AccountId = :acc.Id USER_MODE];
             //test
 
             for (Contact con : relatedContacts) {
                 // Some business logic would go here...
                 System.debug('Processing Contact: ' + con.Name);
-            }
+            }*/
         }
     }
 }
