--- a/force-app/main/default/classes/PMDLoopDemo.cls
+++ b/force-app/main/default/classes/PMDLoopDemo.cls
@@ -9,7 +9,7 @@ public with sharing class PMDLoopDemo {
 
         // This loop iterates over each Account record.
 
-        //dummy update
+        //dummy update 2
         for (Account acc : triggerAccounts) {
 
             // BAD PRACTICE: SOQL query inside a for loop.
